Updates from Overleaf

--- a/xi-qiu-resume.tex
+++ b/xi-qiu-resume.tex
@@ -216,7 +216,7 @@
       {\positionItem{Wechat Mini-APP for Education} \techStack{React, Spring Boot, MySQL}}{Apr. 2020 -- Now}
       \resumeItemListStart
         \resumeItem{Designed and developed Wechat Mini-APP for Project Nous (NGO for equal access to education); frequently used by 80+ volunteers and 400+ students for program application, admission, and course registration}
-        \resumeItem{Built front-end with React and backend with Spring Boot; collaborated in team of 3 through GitHub and Slack}
+        \resumeItem{Built front-end with React and back-end with Spring Boot; collaborated in team of 3 through GitHub and Slack}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
