--- a/xi-qiu-resume.tex
+++ b/xi-qiu-resume.tex
@@ -201,7 +201,7 @@
       {\positionItem{Face Analysis iOS Application} \techStack{SwiftUI, CoreML, Vision}}{Jan. 2022}
       \resumeItemListStart
         \resumeItem{Developed iOS APP that extracts faces in a photo and shows predicted age, gender, and emotion for each face}
-        \resumeItem{Implemented CoreML machine learning models on iOS with SwiftUI; detected and cropped faces with Vision, Apple's built-in framework for computer vision}
+        \resumeItem{Implemented CoreML machine learning models on iOS with SwiftUI; detected and cropped faces with Vision (Apple's built-in framework for computer vision)}
       \resumeItemListEnd
 
     \resumeProjectHeading
