Updates from Overleaf

--- a/xi-qiu-resume.tex
+++ b/xi-qiu-resume.tex
@@ -143,7 +143,7 @@
       {\footnotesize Master of Computer and Information Technology}
       \resumeItemListStart
         \resumeItem{Cumulative GPA: 4.0/4.0}
-        \resumeItem{\textit{Ongoing Coursework}: Data Structures, Algorithms, Web Development, Database, Machine Learning, Theory of Computation, Computer Architecture, Operating Systems, Internet and Web Systems, Computer Graphics}
+        \resumeItem{\textit{Ongoing Coursework}: Data Structures, Algorithms, Web Development, Database, Machine Learning, Theory of Computation, Computer Architecture, OS, Distributed Systems, Internet and Web Systems, Computer Graphics}
     \resumeItemListEnd
 
     \educationSubheading
