Updates from Overleaf

--- a/xi-qiu-resume.tex
+++ b/xi-qiu-resume.tex
@@ -233,7 +233,7 @@
     \small{\item{
     \vspace{2pt}
      \textbf{\color{emph} Languages}{: Python, Java, C, C++, JavaScript, HTML/CSS, Rust, Swift} \\
-     \textbf{\color{emph} Tools}{: Git, Linux, Docker, Node.js, React, Cypress, SwiftUI} \\
+     \textbf{\color{emph} Tools}{: Git, Linux, Docker, Node.js, React, Cypress, SwiftUI, OpenGL} \\
      \textbf{\color{emph} Big Data}{: MySQL, MongoDB, Pandas, Matplotlib, Seaborn, TensorFlow}
     }}
  \end{itemize}
