--- a/xi-qiu-resume.tex
+++ b/xi-qiu-resume.tex
@@ -202,7 +202,7 @@
 
     \educationSubheading
       {University of Oxford}{2015 -- 2019}
-      {Philosophy, Politics and Economics}
+      {BA in Philosophy, Politics and Economics}
       \resumeItemListStart
         \resumeItem{Overall Honours Classification: First Class -- GPA equivalent: 4.0}
     \resumeItemListEnd
