Update education months

--- a/xi-qiu-resume.tex
+++ b/xi-qiu-resume.tex
@@ -194,14 +194,14 @@
 \section{Education}
   \resumeSubHeadingListStart
     \educationSubheading
-      {University of Pennsylvania}{2021 -- 2023}
+      {University of Pennsylvania}{Aug 2021 -- May 2023}
       {Master of Computer and Information Technology}
       \resumeItemListStart
         \resumeItem{GPA: 4.0 \ $\mid$ \ Courses: Data Structures, Algorithms, Database Systems, Machine Learning, Distributed Systems}
     \resumeItemListEnd
 
     \educationSubheading
-      {University of Oxford}{2015 -- 2019}
+      {University of Oxford}{Oct 2015 -- Jun 2019}
       {BA in Philosophy, Politics and Economics}
       \resumeItemListStart
         \resumeItem{Overall Honours Classification: First Class -- GPA equivalent: 4.0}
