--- a/xi-qiu-resume.tex
+++ b/xi-qiu-resume.tex
@@ -146,13 +146,23 @@
 
     \workSubheading
       {PayPal}
+      {Machine Learning Engineer}
+      {San Jose, CA}
+      {Mar 2025 -- Present}
+      \resumeItemListStart
+        \resumeItem{Designed and implemented a multi-agent AI system for Suspicious Actor Report (SAR) generation using Gemini, Next.js, and, FastAPI. The system performs risk analysis based on user and transaction attributes, incorporates human feedback to refine outputs, and creates SAR drafts for final review.}
+        \resumeItem{Optimized AI agent performance through evaluation and prompt engineering to align with risk investigators’ needs. Improved the accuracy of identified suspicious transaction values by 2.5x when benchmarked against human-written reports.}
+        \resumeItem{Deployed and maintained traditional ML and GenAI models for partner teams, ensuring scalable, cost-efficient production performance with continuous monitoring and optimization.}
+      \resumeItemListEnd
+
+    \workSubheading
+      {PayPal}
       {Software Engineer}
       {San Jose, CA}
-      {Jul 2023 -- Present}
+      {Jul 2023 -- Mar 2025}
       \resumeItemListStart
         \resumeItem{Spearheaded the development of 3 microservices for PayPal's rewards platform serving over 10 million users, achieving a 10x increase in rewarded transactions. Used Java, Spring Boot, Spring Batch, and Message Queue.}
         \resumeItem{Increased revenue by 30\% through developing a feature to charge rewards commissions directly from merchants. Eliminated the cost of intermediary agencies for merchants.}
-        \resumeItem{Designed, developed, and tested the capability to serve product-based offers on the rewards platform in addition to merchant-based offers. Enhanced the granularity of rewards.}
         \resumeItem{Led an initiative to improve the test framework. Reduced functional test execution time by 40\%, increased test coverage for all components by 10\%, and improved traceability of test case changes.}
         \resumeItem{Deployed the rewards platform's microservices to 600+ distributed instances, identified key performing metrics, and set up monitoring dashboards and threshold alerts.}
       \resumeItemListEnd
@@ -176,17 +186,6 @@
         \resumeItem{Created a tutorial on using Docker to containerize ML models with WebAssembly VM and deploying on AWS Lambda. Published as a GitHub repository and received 50+ stars.}
         \resumeItem{Developed code examples of serverless functions using Rust and deployed on WebAssembly-powered cloud platform.}
       \resumeItemListEnd
-
-    \workSubheading
-      {TikTok}
-      {Product Manager Intern}
-      {Beijing, China}
-      {Dec 2020 -- Apr 2021}
-      \resumeItemListStart
-        \resumeItem{Improved key risk metrics by 60\% through analyzing advertiser behavioral data using SQL and Python. Detected features of risky advertisers and implemented corresponding risk-control measures.}
-        \resumeItem{Designed a credit system for 25k TikTok advertisers in collaboration with the engineering team.}
-        \resumeItem{Presented risk metrics updates and analysis in cross-functional weekly meetings of 50+ people.}
-    \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
